# mumps-parametrable-launcher

./: README.md  meson.build
MUMPS/Base/: .clang-format  Makefile  config.json  meson.build  meson.options  mumps.c  run_mlkaps.batch  run_mumps.sh  run_mumps_analysis_perf.sh
MUMPS/Base/doc/: Doxyfile.in  meson.build
MUMPS/Base/include/: mumps_calls.h  utils.h
MUMPS/Base/other/: run_mlkaps.batch
MUMPS/Base/scripts/: run_mumps.sh  run_mumps_analysis_energy.sh  run_mumps_analysis_energy.sh.in  run_mumps_factorization_energy.sh  run_mumps_factorization_perf.sh
MUMPS/Base/src/: main.c  meson.build  mumps_calls.c  utils.c
MUMPS/utils/: extract_info.py  plot_convergence.py  run_optuna.py
doc/: Doxyfile.in  meson.build
include/: utils.h
scripts/: run_mumps.sh.in  run_mumps_analysis_energy.sh.in  run_mumps_analysis_perf.sh.in  run_mumps_analysis_time.sh.in  run_mumps_factorization_energy.sh.in  run_mumps_factorization_perf.sh.in  run_mumps_factorization_time.sh.in  run_mumps_file.sh.in
src/: mumps_calls.c  utils.c
