option(
  'metis-path',
  type: 'string',
  value: '/usr',
  description: 'Path to METIS install directory',
)
option(
  'scotch',
  type: 'boolean',
  value: false,
  description: 'Build with SCOTCH as a dependency',
)
option(
  'scotch-path',
  type: 'string',
  value: '/usr',
  description: 'Path to SCOTCH install directory',
)
option(
  'spral-path',
  type: 'string',
  value: '/usr',
  description: 'Path to SPRAL install directory',
)
option(
  'mumps-path',
  type: 'string',
  value: '/usr',
  description: 'Path to MUMPS install directory',
)
option(
  'ear-path',
  type: 'string',
  value: '/usr',
  description: 'Path to EAR install directory ($EAR_INSTALL_DIR)',
)
option(
  'doc',
  type: 'boolean',
  value: false,
  description: 'Generate the documentation',
)
option(
  'mkl',
  type: 'boolean',
  value: false,
  description: 'Build with MKL as a dependency',
)
option(
  'mpi',
  type: 'boolean',
  value: true,
  description: 'Link with MPI',
)
option(
  'spack',
  type: 'boolean',
  value: false,
  description: 'Put global path in the script for a use with spack',
)
option(
  'cluster',
  type: 'boolean',
  value: false,
  description: 'Use SLURM command to launch the executables',
)
